Fix hero SCSS on mobile view

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,7 @@
 $primary-color : #f70;
 
 @import '_reset';
+@import '_mixins';
 
 
 body {
@@ -16,24 +17,6 @@ body {
   align-items: center;
   justify-content: space-between;
 }
-
-/* Utility classes */
-@mixin btn-primary {
-  background: $primary-color;
-  border: 1px solid $primary-color;
-  box-shadow: 0 4px 10px 0 rgba(255, 124, 16, 0.45);
-  border-radius: 5px;
-  color: #fff;
-  text-decoration: none;
-  transition: 0.4s ease-out;
-
-  &:hover {
-    background: #d17e01;
-    border-color: #d17e01;
-    box-shadow: 0 4px 10px 0 rgba(208, 125, 1, 0.45);
-  }
-}
-
 
 
 /* Main Header */
@@ -79,7 +62,7 @@ body {
   padding: 5rem 0;
   margin-bottom: 4rem;
 
-  .hero__img {
+  &__img {
     flex: 0.5;
     width: 25%;
     margin-right: 8%;
@@ -93,7 +76,7 @@ body {
   }
 
 
-  .hero__desc {
+  &__desc {
     flex: 1;
     line-height: 2.3;
 
@@ -109,7 +92,7 @@ body {
     }
   }
 
-  .hero__btn {
+  &__btn {
     @include btn-primary;
     padding: 1% 3%;
     display: inline-block;
